# microstructure-ml

./: .gitignore  DESIGN.md  Makefile  README.md  pyproject.toml
documentation/: 01_architecture.md  02_infrastructure.md  03_features.md  04_labels_validation_training.md  05_findings_and_reframing.md
src/microstructure_ml/: book_builder.py  coinbase_adapter.py  collector.py  feature_pipeline.py  kraken_adapter.py  label_builder.py  snapshot_sampler.py  snapshot_writer.py  training_pipeline.py  validation_split.py
tests/: test_book_builder.py  test_features_pipeline.py  test_label_builder.py  test_snapshot_sampler.py  test_snapshot_writer.py  test_training_pipeline.py  test_validation_split.py
