[project]
name = "microstructure-ml"
version = "0.1.0"
description = ""
authors = [
    {name = "Josh Brannon",email = "brannonjosh@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "microstructure_ml", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
