[project]
name = "microstructure-ml"
version = "0.1.0"
description = ""
authors = [
    {name = "Josh Brannon",email = "brannonjosh@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "websockets (>=16.0,<17.0)",
    "polars (>=1.39.3,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "numpy (>=2.4.6,<3.0.0)"
]

[tool.poetry]
packages = [{include = "microstructure_ml", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
